# bazel-hermetic-python

./: BUILD.bazel  LICENSE  README.md  WORKSPACE  main.py  requirements.txt
